--- a/rps.html
+++ b/rps.html
@@ -1,30 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Page Title</title>
+  <title>JavaScript Rock Paper Scissors</title>
 </head>
 <body>
   <script>
     // Your JavaScript goes here!
     console.log("Hello, World!")
 
-    function computerPlay() {
-        let choice
+    let compScore = 0;
+    let playerScore = 0;
+
+    function computerChoice() {
         const num = Math.floor(Math.random() * 3);
         if (num === 0) {
-            choice = "Rock";
+            return "rock";
         } else if (num === 1) {
-            choice = 'Paper';
+            return "paper";
         } else if (num === 2) {
-            choice = "Scissors";
+            return "scissors";
         } else {
-            choice = "Something has gone awry";
+            return "Something has gone awry";
         }
     }
 
-    
+    function playRound(playerSelection, computerSelection) {
+      if (playerSelection === computerSelection) {
+        return "It's a Tie!"
+      } else if (computerSelection === "rock" && playerSelection === "paper" ) {
+        playerScore ++;
+        return `You win! Paper beats Rock! The score is now Player: ${playerScore} Computer: ${compScore}`;
+      } else if (computerSelection === "rock" && playerSelection === "scissors" ) {
+        compScore ++;
+        return `You lose! Rock beats Scissors! The score is now Player: ${playerScore} Computer: ${compScore}`;
+      } else if (computerSelection === "paper" && playerSelection === "rock" ) {
+        compScore ++;
+        return `You lose! Paper beats Rock! The score is now Player: ${playerScore} Computer: ${compScore}`;
+      } else if (computerSelection === "paper" && playerSelection === "scissors" ) {
+        playerScore ++;
+        return `You win! Scissors beats Paper! The score is now Player: ${playerScore} Computer: ${compScore}`;
+      } else if (computerSelection === "scissors" && playerSelection === "paper" ) {
+        compScore ++;
+        return `You lose! Scissors beats Paper! The score is now Player: ${playerScore} Computer: ${compScore}`;
+      } else if (computerSelection === "scissors" && playerSelection === "rock" ) {
+        playerScore ++;
+        return `You win! Rock beats Scissors! The score is now Player: ${playerScore} Computer: ${compScore}`;
+      }
+    }
 
-    computerPlay();
+    function game() {
+      let i;
+      for (i=0; i<5; i++) {
+        let playerSelection = prompt("What is your selection? ");
+        playerSelection = playerSelection.toLowerCase();
+        let computerSelection = computerChoice();
+        console.log(`You've chosen ${playerSelection}!`);
+        console.log(`The computer selected ${computerSelection}!`);
+        console.log(playRound(playerSelection, computerSelection));
+      }
+      console.log(`The final score is:  Player with ${playerScore} points, Computer with ${compScore} points!`);
+    }
+
+    game();
+
   </script>
 </body>
 </html>
