Modified score chart.

--- a/rpsv2.html
+++ b/rpsv2.html
@@ -26,8 +26,10 @@
     <div id="results-table">
       <table id="table">
         <tr>
+          <th>Round</th>
           <th>Player Choice</th>
           <th>Computer Choice</th>
+          <th>Winner</th>
           <th>Player Score</th>
           <th>Computer Score</th>
         </tr>
