--- a/rpsv2.html
+++ b/rpsv2.html
@@ -5,42 +5,46 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1>Rock Paper Scissors!</h1>
-  <div id="play-area">
-    <h2>First to 5 Wins</h2>
+  <div class="game">
+  <h1>Rock Paper Scissors!</h1> 
+  <div class="content">
+    <div class="play-area">
+      <div>
+      <h2>First to 5 Wins</h2>
 
-    <div class="buttons">
-      <button id="rock">Rock</button>
-      <button id="paper">Paper</button>
-      <button id="scissors">Scissors</button>
+      <div class="buttons">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+      </div>
+
+      <div class="choices-output">
+        <p id="playerchoice"></p>
+        <p id="compchoice"></p>
+      </div>
+      </div>
     </div>
+    <div class="score-area">
 
-    <div id="choices-output">
-      <p id="playerchoice"></p>
-      <p id="compchoice"></p>
+      <div id="results-table">
+        <table id="table">
+          <tr>
+            <th>Round</th>
+            <th>Player Choice</th>
+            <th>Computer Choice</th>
+            <th>Winner</th>
+            <th>Player Score</th>
+            <th>Computer Score</th>
+          </tr>
+        </table>
+      </div>
     </div>
-
   </div>
-  <div id="score-area">
-
-    <div id="results-table">
-      <table id="table">
-        <tr>
-          <th>Round</th>
-          <th>Player Choice</th>
-          <th>Computer Choice</th>
-          <th>Winner</th>
-          <th>Player Score</th>
-          <th>Computer Score</th>
-        </tr>
-      </table>
-    </div>
-
-    <div id="resultscontainer">
-      <p id="score"></p>
-    </div>
+  <div id="resultscontainer">
+    <p id="score"></p>
   </div>
-
+  </div
+  >
 
   <script src="javascript.js">
     // Your JavaScript goes here!
