function changes and button modifications for results and new game

--- a/rpsv2.html
+++ b/rpsv2.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div class="game">
+  <div id="game">
   <h1>Rock Paper Scissors!</h1> 
   <div class="content">
     <div class="play-area">
@@ -41,10 +41,9 @@
     </div>
   </div>
   <div id="resultscontainer">
-    <p id="score"></p>
+    <div id="score"></div>
   </div>
-  </div
-  >
+  </div>
 
   <script src="javascript.js">
     // Your JavaScript goes here!
